<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Homework</string>
    <string name="hello_world">Hello world!</string>
    <string name="noInternet">Please enable your Internet Connection!</string>

    <!-- Navbar -->
    <string name="tempText">Title</string>

    <!-- First Screen Strings // Should become a splashScreen -->
    <string name="tvWelcome">Welcome!</string>
    <string name="btnLogin">Log in</string>
    <string name="btnRegister">Register</string>
    <string name="tvOr">or</string>

    <!-- Register Screen Strings -->
    <string name="et_hint_username">Username:</string>
    <string name="et_hint_password">Password:</string>
    <string name="et_hint_email">Email:</string>

    <!-- Homepage -->
    <string name="btnSettings">Settings</string>
    <string name="btnFeeds">Feeds</string>
    <string name="btnChangeBack">Change Background</string>
    <string name="btnLogout">Logout</string>
    <string name="time" formatted="false"><![CDATA[<b>%02d</b>:%02d]]></string>

    <!-- Settings -->
    <string name="hint_register_w_mail_second_name">Username:</string>
    <string name="btn_account_save_changes">Save Changes</string>
    <string name="hint_change_mail">Email: </string>
    <string name="btn_account_change_password">Change your password</string>
    <string name="btn_change_feeds">Change Feeds</string>
    <string name="btn_changeInterests">Choose your interests</string>
    <string name="hint_old_password">Old password:</string>
    <string name="hint_new_password">New password:</string>
    <string name="hint_new_password_again">Confirm password:</string>
    <string name="hint_change_age">Age:</string>
    <string name="hint_change_car">Car:</string>
    <string name="ok">Ok</string>

    <!-- Feed Chooser -->
    <string name="rZiuaIzabellei">Ziua Izabellei</string>
    <string name="rMusic">Music</string>
    <string name="rCall">Call Mom</string>
    <string name="rAvengers">Age of Ultron</string>
    <string name="rStarWars">Star Wars</string>
    <string name="rBioshock">Bioshock</string>
    <string name="rMassEffect">Mass Effect</string>
    <string name="tvFeedRandom">Random</string>
    <string name="tvFeedGames">Games</string>
    <string name="tvFeedMovies">Movies</string>
    <string name="btn_saveFeed">Save</string>

</resources>