<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvFeedRandom"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/rgRandom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rIzabellasBirthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rZiuaIzabellei" />

                <RadioButton
                    android:id="@+id/rMusic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rMusic" />

                <RadioButton
                    android:id="@+id/rCall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rCall" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/tvFeedMovies"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/rgMovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rStarWars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rStarWars" />

                <RadioButton
                    android:id="@+id/rAvengers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rAvengers" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/tvFeedGames"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/rgGames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rBioshock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rBioshock" />

                <RadioButton
                    android:id="@+id/rMassEffect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rMassEffect" />
            </RadioGroup>

            <Button
                android:id="@+id/btnSaveFeedInterests"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_button"
                android:paddingTop="10dp"
                android:text="@string/btn_saveFeed"
                android:textColor="#fff" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>