<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_changeBg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/rounded_button"
                android:text="@string/btnChangeBack"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_accountSettings"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_button"
                android:text="@string/btnSettings"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_button"
                android:text="@string/btnLogout"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>